--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,20 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  display: flex;
+  list-style: none;
+}
+
+
+.gallery__item{
+  flex-basis: calc(100% / 3 - 30px);
+  margin-left: 30px;
+}
+
+.gallery__image {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+}
